RESOLVED FIXED201301
[WPE][Qt] loadingChanged signal parameter is unusable
https://bugs.webkit.org/show_bug.cgi?id=201301
Summary [WPE][Qt] loadingChanged signal parameter is unusable
Philippe Normand
Reported 2019-08-29 06:53:30 PDT
The WPEQtView class can't rely on the readability/parameter_name rule, because omitting parameter names for QML signals leads to runtime errors.
Attachments
Patch (3.47 KB, patch)
2019-08-29 06:56 PDT, Philippe Normand
cgarcia: review+
Philippe Normand
Comment 1 2019-08-29 06:56:50 PDT
Philippe Normand
Comment 2 2019-08-30 01:29:58 PDT
Note You need to log in before you can comment on or make changes to this bug.