[WPE][Qt] loadingChanged signal parameter is unusable https://bugs.webkit.org/show_bug.cgi?id=201301

Reviewed by Carlos Garcia Campos.

Source/WebKit:

* UIProcess/API/wpe/qt/WPEQtView.h: Explicitely name signal
parameter. It is a runtime requirement for QML.

Tools:

* MiniBrowser/wpe/qt/main.qml: Add a basic loadingChange signal handler.
* Scripts/webkitpy/style/checker.py: White-list WPEQtView.h for
readablity/parameter_name code styl checker rule.

Canonical link: https://commits.webkit.org/214988@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249318 268f45cc-cd09-0410-ab3c-d52691b4dbfc